
ADD_LIBRARY ( PyIex ${LIB_TYPE}
	PyIex.cpp
)

TARGET_LINK_LIBRARIES ( PyIex
	${PYTHON_LIBRARIES}
    ${BOOST_PYTHON_LIB}
    IlmBase::Iex
)

TARGET_INCLUDE_DIRECTORIES ( PyIex PUBLIC
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/PyIex>
    $<INSTALL_INTERFACE:include>
)

INSTALL ( TARGETS PyIex
	DESTINATION
	lib
)

ADD_LIBRARY ( iexmodule ${LIB_TYPE}
	iexmodule.cpp
)

SET_TARGET_PROPERTIES ( iexmodule
	PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
)

TARGET_LINK_LIBRARIES ( iexmodule
	PyIex
)

INSTALL ( TARGETS iexmodule
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

